--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -8,7 +8,7 @@
 }
 body{
 font-family: var(--mainF);
-height: 4000px;
+height: 3000px;
 }
 *{
     padding: 0;
@@ -37,4 +37,56 @@ a{
 }
 ul{
     list-style: none;
+}
+@media (max-width: 1200px) {
+    .container {
+        width: 100%;
+        padding: 0 20px;
+    }
+
+    .row {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .header .list ul {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .header .sing {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
+@media (max-width: 768px) {
+    .header .list {
+        display: none;
+    }
+
+    .header .bar {
+        display: inline-block;
+    }
+}
+
+@media (max-width: 480px) {
+    .header .logo {
+        font-size: 12px;
+        width: 150px;
+    }
+
+    .header .sing a {
+        padding: 10px 20px;
+        font-size: 16px;
+    }
+
+    .task-1 .right-side h1 {
+        font-size: 24px;
+    }
+
+    .task-1 .right-side p, .task-1 .right-side h3, .task-1 .right-side .color-text2 {
+        font-size: 14px;
+    }
 }
